# World

./: .gitignore  .travis.yml  Busterblader77@msn.com  CMakeLists.txt  LICENSE.txt  README.md  first  makefile  styleguide.txt  world.pc.in
doc/: dev_env.txt  readme_ENG.txt  readme_JP.txt
examples/: CMakeLists.txt  README.md  analysis.cpp  makefile  synthesis.cpp
examples/analysis_synthesis/: CMakeLists.txt  analysis.cpp  makefile  synthesis.cpp
examples/codec_test/: CMakeLists.txt  README.md  apanalysis.cpp  f0analysis.cpp  makefile  readandsynthesis.cpp  spanalysis.cpp
examples/parameter_io/: CMakeLists.txt  README.md  apanalysis.cpp  f0analysis.cpp  makefile  readandsynthesis.cpp  spanalysis.cpp
platform/linux/: Makefile.linux
platform/win/win/: win.vcxproj  win.vcxproj.filters
platform/win/win/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  win.lastbuildstate
src/: cheaptrick.cpp  cheaptrick.h  codec.cpp  common.cpp  common.h  constantnumbers.h  d4c.cpp  d4c.h  dio.cpp  dio.h  fft.cpp  fft.h  harvest.cpp  macrodefinitions.h  matlabfunctions.cpp  matlabfunctions.h  stonemask.cpp  stonemask.h  synthesis.cpp  synthesis.h  synthesisrealtime.cpp  version.cpp
src/world/: cheaptrick.h  codec.h  common.h  config.h.in  constantnumbers.h  d4c.h  dio.h  fft.h  harvest.h  matlabfunctions.h  stonemask.h  synthesis.h  synthesisrealtime.h  version.h
test/: audioio.cpp  audioio.h  ctest.c  test.cpp
tools/: README.md  audioio.cpp  audioio.h  parameterio.cpp  parameterio.h
visualstudio/: README.md  win.sln
visualstudio/win/: win.vcxproj  win.vcxproj.filters
visualstudio2015/: .gitignore  README.md
visualstudio2015/win/: win.vcxproj
visualstudio2019/win/: win.vcxproj  win.vcxproj.filters
visualstudio2022/: win.sln
visualstudio2022/win/: win.vcxproj
